Auto close sidenav when scrollTo(element) is called and fix "Upcoming Events" button on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -61,3 +61,10 @@ body {
 .navbar-default .navbar-toggle .icon-bar {
     background-color: #fff !important;
 }
+
+
+@media (max-width: 768px) {
+    .p-sm-14 {
+        padding: 14px !important;
+    }
+}
